--- a/apps/records-pages/public/index.html
+++ b/apps/records-pages/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Header</title>
+    <title>Records</title>
     <!-- Google Fonts are injected via shared webpack plugin -->
     <meta name="description" content="Example module federated app, running on React" />
     <!--usually all these icons are different and optimized per each use case, but we will just use the same-->
